css reloaded and small spacing fix

--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -194,7 +194,7 @@ body {
         margin-bottom: 6.4rem; } }
 
 .hero {
-  padding: 14.75rem 0 10.8rem 0;
+  padding: 14.6rem 0 12rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
