--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-    padding: 14.75rem 0 10.8rem 0;
+    padding: 14.6rem 0 12rem 0;
 
     display: flex;
     flex-direction: column;
